app/assets/stylesheets/form.scss
.payment-form {
	padding-bottom: 50px;

  .content {
  	box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.075);
  	background-color: white;
  }

  .block-heading {
		padding-left: 15px;
		padding-right: 15px;
    padding-top: 50px;
    margin-bottom: 40px;
    text-align: center;
  }

  .block-heading p {
  	text-align: center;
  	max-width: 420px;
  	margin: auto;
  	opacity:0.7;
    font-size: 11pt;
  }

  .dark .block-heading p {
  	opacity:0.8;
  }

  .block-heading h1,
  .block-heading h2,
  .block-heading h3 {
  	margin-bottom:1.2rem;
  	color: #3b99e0;
  }

  form {
  	border-top: 2px solid #5ea4f3;
  	box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.075);
  	background-color: #ffffff;
  	padding: 0;
  	max-width: 600px;
  	margin: auto;
  }

  .title {
  	font-size: 1em;
  	border-bottom: 1px solid rgba(0,0,0,0.1);
  	margin-bottom: 0.8em;
  	font-weight: 600;
  	padding-bottom: 8px;
  }

  .products {
  	background-color: #f7fbff;
      padding: 25px;
  }

  .products .item {
  	margin-bottom:1em;
    padding-top: 1em;
    padding-bottom: 1em;
  }

  .products .item-name {
  	font-weight:600;
  	font-size: 0.9em;
  }

  .products .item-description {
  	font-size:0.8em;
  	opacity:0.6;
  }

  .products .item p {
  	margin-bottom:0.2em;
  }

  .products .quantity {
  	float: right;
  	font-weight: 600;
  	font-size: 0.9em;
  }

  .quantity input {
    width: 4em;
    padding-left: .4em;
  }

  textarea {
    width: 100%;
  }

  .admission-name {
    float: right;
  }

  .products .total{
  	border-top: 1px solid rgba(0, 0, 0, 0.1);
  	margin-top: 10px;
  	padding-top: 19px;
  	font-weight: 600;
  	line-height: 1;
  }

  .details{
  	padding: 25px 25px 15px;
  }

  .details label{
  	font-size: 12px;
  	font-weight: 600;
  	margin-bottom: 15px;
  	color: #79818a;
  	text-transform: uppercase;
  }

  .details button{
  	margin-top: 0.6em;
  	padding:12px 0;
  	font-weight: 600;
  }

  .date-separator{
   	margin-left: 10px;
      margin-right: 10px;
      margin-top: 5px;
  }

  #admission-cost {
    margin-left: -5px;
  }

  .form-row {
    padding: 20px;
  }
}

.StripeElement {
  background-color: white;
  padding: 8px 12px;
  border-radius: 4px;
  border: 1px solid transparent;
  box-shadow: 0 1px 3px 0 #e6ebf1;
  -webkit-transition: box-shadow 150ms ease;
  transition: box-shadow 150ms ease;
}

.StripeElement--focus {
  box-shadow: 0 1px 3px 0 #cfd7df;
}

.StripeElement--invalid {
  border-color: #fa755a;
}

.StripeElement--webkit-autofill {
  background-color: #fefde5 !important;
}

@media (min-width: 576px) {
	.payment-form {
    .title {
  		font-size: 1.2em;
  	}

  	.products {
  		padding: 40px;
    }

  	.products .item-name {
  		font-size: 1em;
  	}

  	.products .quantity {
      	font-size: 1em;
  	}

  	.details {
    	padding: 40px 40px 30px;
    }

  	.details button {
    	margin-top: 2em;
    }
  }
}

